overflow fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ strong, b {
 }
 
 @media only screen and (min-width: 769px) and (max-width: 823px) and (orientation: landscape) {
+
+body{
+   overflow-y: scroll !important;
+}
   .zoomAll{
 
     zoom:210% !important;
@@ -37,7 +41,9 @@ strong, b {
 @media only screen and (min-width: 0px) and (max-width: 823px) and (orientation: landscape) {
 
 
-
+  body{
+     overflow-y: scroll !important;
+  }
   #miles {
     width: 80% !important;
   }
@@ -49,12 +55,12 @@ strong, b {
 
   .textMargin2 {
     width: 80% !important;
-    padding-left: 7px !important;
+    margin-left: 7px !important;
   }
 
   .textMargin3 {
     width:80% !important;
-    padding-left: 7px !important;
+    margin-left: 7px !important;
   }
 
 
@@ -108,6 +114,11 @@ margin-left:-30px !important;
 }
 
 @media only screen and (max-width: 320px) and (orientation: portrait) {
+
+  body{
+     overflow-y: scroll !important;
+  }
+
   .mid {
 
 justify-content: center !important;
@@ -165,12 +176,12 @@ justify-content: center !important;
 
   .textMargin2 {
     width: 80% !important;
-    padding-left: 7px !important;
+    margin-left: 7px !important;
   }
 
   .textMargin3 {
     width:80% !important;
-    padding-left: 7px !important;
+    margin-left: 7px !important;
   }
 
   .textMargin {
@@ -194,6 +205,10 @@ justify-content: center !important;
 }
 
 @media only screen and (min-width: 321px) and (max-width: 360px) and (orientation: portrait) {
+  body{
+     overflow-y: scroll !important;
+  }
+
   .image {
     margin-top: 5px;
     height: 50px !important;
@@ -249,6 +264,10 @@ margin-left: -30px !important;
 }
 
 @media only screen and (min-width: 361px) and (max-width: 500px) and (orientation: portrait) {
+
+  body{
+     overflow-y: scroll !important;
+  }
   .mid {
     padding-left: 20px;
   }
@@ -264,12 +283,12 @@ margin-left: -30px !important;
 
   .textMargin2 {
     width: 80% !important;
-    padding-left: 13px !important;
+    margin-left: 13px !important;
   }
 
   .textMargin3 {
     width:80% !important;
-    padding-left: 15px !important;
+    margin-left: 15px !important;
   }
 
   .textMargin {
@@ -328,6 +347,10 @@ margin-left: -30px !important;
 }
 
 @media only screen and (min-width: 501px) and (max-width: 768px) and (orientation: portrait) {
+
+  body{
+     overflow-y: scroll !important;
+  }
   .image {
     margin-top: 15px !important;
     margin-left: -20px !important;
@@ -358,6 +381,10 @@ margin-left: -30px !important;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) and (orientation: portrait) {
+
+  body{
+     overflow-y: scroll !important;
+  }
   .image {
     margin-top: 20px !important;
     margin-left: -15px !important;
@@ -380,7 +407,7 @@ margin-left: -30px !important;
 
 /* main body css */
 .RadioButtons {
-  padding-left: 26px !important;
+  padding-left: 20px !important;
   align-items: center !important;
 }
 
@@ -398,7 +425,7 @@ padding-top: 15px !important;
 
 }
 .textMargin3 {
-  padding-left: 5px  !important;
+  padding-left: 5px  ;
   margin-right: 20px;
   width: 300px;
 }
@@ -410,7 +437,7 @@ padding-top: 15px !important;
 }
 
 body {
-  /* overflow-y: hidden; */
+   overflow-y: hidden;
   -moz-transform-origin: 0 0;
   left: 0;
   font-family: 'AvenirMedium' !important;
